improved lookup, multiple input types

--- a/inst/htmlwidgets/style.css
+++ b/inst/htmlwidgets/style.css
@@ -9,7 +9,7 @@ circle.EasternEurope, circle.CentralAmerica { fill: #9fad9e; }
 circle.EasternAsia, circle.SouthernAsia, circle.WesternAsia, circle.CentralAsia { fill: #9c8c9f; }
 circle.WesternEurope, circle.NorthernEurope, circle.SouthernEurope { fill: #fab585; }
 circle.NorthernAfrica, circle.SouthernAfrica, circle.MiddleAfrica, circle.WesternAfrica, circle.EasternAfrica { fill: #b28d69; }
-circle.AustraliaandNewZealand, circle.Polynesia, circle.Caribbean, circle.Melanesia, circle.Micronesia { fill: #78C0A8; }
+circle.AustraliaandNewZealand, circle.Polynesia, circle.Caribbean, circle.Melanesia, circle.Micronesia, circle.unknown { fill: #78C0A8; }
 text {
   fill: #555;
   font-family: sans-serif;
